# CartesSociete

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
_bmad/: config.yaml  workflows.md
_bmad/templates/: architecture.md  balance-analysis.md  ml-design.md  prd-lite.md  task-breakdown.yaml
audits/: audit-2025-12-29-card-system.md  audit-2025-12-29-game-engine.md  audit-2025-12-29-game-rules.md  audit-2025-12-29-phase2-baseline-agents.md  audit-2025-12-29-phase4-analysis-mcts.md  audit-2025-12-29-simulation-framework.md  audit-2026-01-01-abilities-implementation.md  audit-2026-01-01-lapin-board-limits.md  audit-2026-01-19-analytical-mandate-integration.md  audit-2026-01-19-bmad-agentic-governance.md  audit-2026-01-19-bmad-setup-guide.md  audit-2026-01-19-comprehensive-project-audit.md  audit-2026-01-19-planning-artifacts-verification.md  audit-2026-01-19-planning-artifacts.md  audit-2026-01-19-technical-review-layer1.md  audit-2026-01-19-wealon-governance-commit.md
configs/: __init__.py  game_config.py  yolo_training.yaml
data/cards/: QC_REMARKS_PENDING.md  atlantide.json  (+11 more)
docs/: BMAD_AGENTIC_SETUP_GUIDE.md  CI_CD.md  IMPLEMENTATION_SUMMARY.md  project-context.md  rl-research-plan.md
notebooks/: agent_comparison.ipynb  balance_analysis.ipynb
scripts/: export_to_onnx.py  generate_rules_pdf.py  generate_training_data.py  run_card_analysis.py  run_game.py  run_greedy_analysis.py  run_lapin_analysis.py  run_tournament.py  train_card_detector.py  train_ppo.py  validate_cards.py
tests/: conftest.py  test_abilities.py  test_analysis.py  test_card_models.py  test_card_renderer.py  test_card_repository.py  test_engine_integration.py  test_game_engine.py  test_integration_systems.py  test_mcts.py  test_placeholder.py  test_players.py  test_recognition_augmentation.py  test_recognition_config.py  test_recognition_dataset_generator.py  test_recognition_detector.py  test_simulation.py
(+71 files in other folders)
