[project]
name = "cartessociete"
version = "0.1.0"
description = "Solutions and tools for a cardboard/card game design"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf2>=2.8.5",
    "gymnasium>=1.2.3",
    "sb3-contrib>=2.7.1",
    "stable-baselines3[extra]>=2.7.1",
    "tensorboard>=2.20.0",
    # Card recognition (Phase 1)
    "albumentations>=1.4.0",
    "opencv-python>=4.9.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
recognition = [
    # YOLOv8 training and inference (Phase 2)
    "ultralytics>=8.1.0",
    # ONNX export and inference for mobile deployment
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "isort>=5.13.0",
    "pip-audit>=2.7.0",
    "pre-commit>=4.0.0",
    "pytest-timeout>=2.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
timeout = 120
timeout_method = "thread"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
